# neural-translator

./: .bazelrc  .gitignore  BENCHMARK.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PERFORMANCE.md  README.ja.md  README.md  benchmark-models.sh  install.sh  package.json  performance-report.md  pnpm-lock.yaml  start.sh  test-translation-models.sh  tsconfig.json  vitest.config.ts
benchmark/: README.md  benchmark.js  neural-test-2025-08-07.json  package-lock.json  package.json  test-neural-only.js  test-sentences.json
src/: App.tsx  index.css  setup-tests.ts  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  ollama.rs
src/__tests__/: App.test.tsx
src/components/: HistoryScreen.tsx  LanguageSelector.tsx  LanguageSetupModal.tsx  SettingsButton.tsx  SettingsScreen.tsx  TranslateArea.tsx
src/components/__tests__/: LanguageSelector.test.tsx  SettingsButton.test.tsx  SettingsScreen.test.tsx  TranslateArea.test.tsx
