[package]
name = "neural-translator"
version = "0.1.0"
description = "NeuraL Translator - AI-powered translation desktop app"
authors = ["AgileTech"]
edition = "2021"

[lib]
name = "neural_translator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.3", features = [] }
tauri-plugin-opener = "2.3"
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-global-shortcut = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Utilities
tracing = "0.1"  # Structured logging
tracing-subscriber = "0.3"
once_cell = "1.19"  # For static initialization

# File processing
lopdf = "0.32"  # PDF processing
docx-rs = "0.4"  # DOCX file processing
encoding_rs = "0.8"  # Text encoding detection

# History management
uuid = { version = "1.10", features = ["v4"] }  # UUID generation

# Base64 encoding/decoding
base64 = "0.22"

# System metrics
sysinfo = "0.32"  # System information and metrics

[dev-dependencies]
tokio-test = "0.4"     # Async testing utilities
mockall = "0.12"       # Mocking framework

